...
                onClick = {
                    navController.navigate(Screen.AddEditNotesScreen.route)
                },
                containerColor = MaterialTheme.colorScheme.primary
            )
            {
                Icon(imageVector = Icons.Default.List, contentDescription = "New note")
            }
        }
    )
    {padding ->
        Column(
            modifier = Modifier
...
