...
        floatingActionButton = {
            FloatingActionButton(
                onClick = { viewModel.onEvent(AddEditNoteEvent.SaveNote) },
                containerColor = MaterialTheme.colorScheme.primary
            )
            {
               Icon(imageVector = Icons.Default.Done, contentDescription ="Save note")
            }
        },
       snackbarHost = {SnackbarHost(hostState = scaffoldState)}

    )
    {padding->
...
